--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc:w": "tsc -w",
     "start": "npm run tsc:w",
-    "typings": "typings"
+    "typings": "typings",
+    "postinstall": "typings install"
   },
   "author": "",
   "license": "ISC",
@@ -21,13 +22,16 @@
     "@angular/platform-browser-dynamic": "4.4.0-RC.0",
     "@angular/router": "4.4.0-RC.0",
     "@angular/upgrade": "4.4.0-RC.0",
+    "angular2-in-memory-web-api": "0.0.21",
+    "bootstrap": "3.3.7",
     "core-js": "2.5.1",
+    "jquery": "^3.2.1",
+    "jquery-migrate": "^3.0.0",
+    "jqueryui-browser": "^1.10.2-1",
     "reflect-metadata": "0.1.10",
     "rxjs": "5.4.3",
     "systemjs": "0.20.18",
-    "zone.js": "0.8.17",
-    "angular2-in-memory-web-api": "0.0.21",
-    "bootstrap": "3.3.7"
+    "zone.js": "0.8.17"
   },
   "devDependencies": {
     "typescript": "2.5.2",
